# Engine

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini  main.cpp
include/: camera.hpp  mesh.hpp  util.h  util.hpp
include/glad/: glad.h
resources/shaders/: ObjectFragment.glsl  ObjectVertex.glsl
resources/shaders/src/: ObjectFragment.sc  ObjectVertex.sc  varying.def.sc
shaders/: LightVertex.shader  ObjectFragment.shader  ObjectVertex.shader  vs.shader
shaders/src/: vs.sc
src/: camera.cpp  editor.cpp  editor.hpp  glad.c  input.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  util.cpp  window.cpp  window.hpp
